Hopefully fixed the z-index

--- a/frontend/src/Components/Registration/register-login.css
+++ b/frontend/src/Components/Registration/register-login.css
@@ -7,16 +7,16 @@
 }
 
 .right-side.right {
-    position: relative;
-    width: max-content;
-    height: max-content;
+    position: absolute;
+    width: 300px;
+    height: 100px;
     z-index: 50;
 }
 
 .right-side.left {
+    height: 100px;
     position: absolute;
-    width: max-content;
-    height: max-content;
+    width: 300px;
     z-index: 50;
 }
 
